parser.output
   0  $accept : %entry% $end

   1  program : decls EOF

   2  decls :
   3        | decls vdecl
   4        | decls fdecl

   5  fdecl : typ ID LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE

   6  formals_opt :
   7              | formal_list

   8  formal_list : typ ID
   9              | formal_list COMMA typ ID

  10  typ : INT
  11      | BOOL
  12      | FLOAT
  13      | VOID
  14      | STR
  15      | PITCH
  16      | ARRAY LT typ GT

  17  vdecl_list :
  18             | vdecl_list vdecl

  19  vdecl : typ ID SEMI

  20  stmt_list :
  21            | stmt_list stmt

  22  stmt : expr SEMI
  23       | RETURN expr_opt SEMI
  24       | LBRACE stmt_list RBRACE
  25       | IF LPAREN expr RPAREN stmt
  26       | IF LPAREN expr RPAREN stmt ELSE stmt
  27       | FOR LPAREN expr_opt SEMI expr SEMI expr_opt RPAREN stmt
  28       | WHILE LPAREN expr RPAREN stmt

  29  expr_opt :
  30           | expr

  31  expr : LITERAL
  32       | FLIT
  33       | BLIT
  34       | SLIT
  35       | PLIT
  36       | ID
  37       | expr PLUS expr
  38       | expr MINUS expr
  39       | expr TIMES expr
  40       | expr DIVIDE expr
  41       | expr MOD expr
  42       | expr EQ expr
  43       | expr NEQ expr
  44       | expr LT expr
  45       | expr LEQ expr
  46       | expr GT expr
  47       | expr GEQ expr
  48       | expr AND expr
  49       | expr OR expr
  50       | expr LSQUARE expr RSQUARE
  51       | MINUS expr
  52       | NOT expr
  53       | ID ASSIGN expr
  54       | ID LPAREN args_opt RPAREN
  55       | LPAREN expr RPAREN
  56       | LSQUARE args_opt RSQUARE

  57  args_opt :
  58           | args_list

  59  args_list : expr
  60            | args_list COMMA expr

  61  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (61)
	decls : .  (2)

	.  reduce 2

	program  goto 3
	decls  goto 4


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	%entry% : '\001' program .  (61)

	.  reduce 61


state 4
	program : decls . EOF  (1)
	decls : decls . vdecl  (3)
	decls : decls . fdecl  (4)

	INT  shift 5
	BOOL  shift 6
	FLOAT  shift 7
	VOID  shift 8
	STR  shift 9
	PITCH  shift 10
	ARRAY  shift 11
	EOF  shift 12
	.  error

	vdecl  goto 13
	fdecl  goto 14
	typ  goto 15


state 5
	typ : INT .  (10)

	.  reduce 10


state 6
	typ : BOOL .  (11)

	.  reduce 11


state 7
	typ : FLOAT .  (12)

	.  reduce 12


state 8
	typ : VOID .  (13)

	.  reduce 13


state 9
	typ : STR .  (14)

	.  reduce 14


state 10
	typ : PITCH .  (15)

	.  reduce 15


state 11
	typ : ARRAY . LT typ GT  (16)

	LT  shift 16
	.  error


state 12
	program : decls EOF .  (1)

	.  reduce 1


state 13
	decls : decls vdecl .  (3)

	.  reduce 3


state 14
	decls : decls fdecl .  (4)

	.  reduce 4


state 15
	fdecl : typ . ID LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE  (5)
	vdecl : typ . ID SEMI  (19)

	ID  shift 17
	.  error


state 16
	typ : ARRAY LT . typ GT  (16)

	INT  shift 5
	BOOL  shift 6
	FLOAT  shift 7
	VOID  shift 8
	STR  shift 9
	PITCH  shift 10
	ARRAY  shift 11
	.  error

	typ  goto 18


state 17
	fdecl : typ ID . LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE  (5)
	vdecl : typ ID . SEMI  (19)

	SEMI  shift 19
	LPAREN  shift 20
	.  error


state 18
	typ : ARRAY LT typ . GT  (16)

	GT  shift 21
	.  error


state 19
	vdecl : typ ID SEMI .  (19)

	.  reduce 19


state 20
	fdecl : typ ID LPAREN . formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE  (5)
	formals_opt : .  (6)

	INT  shift 5
	BOOL  shift 6
	FLOAT  shift 7
	VOID  shift 8
	STR  shift 9
	PITCH  shift 10
	ARRAY  shift 11
	RPAREN  reduce 6

	typ  goto 22
	formals_opt  goto 23
	formal_list  goto 24


state 21
	typ : ARRAY LT typ GT .  (16)

	.  reduce 16


state 22
	formal_list : typ . ID  (8)

	ID  shift 25
	.  error


state 23
	fdecl : typ ID LPAREN formals_opt . RPAREN LBRACE vdecl_list stmt_list RBRACE  (5)

	RPAREN  shift 26
	.  error


state 24
	formals_opt : formal_list .  (7)
	formal_list : formal_list . COMMA typ ID  (9)

	COMMA  shift 27
	RPAREN  reduce 7


state 25
	formal_list : typ ID .  (8)

	.  reduce 8


state 26
	fdecl : typ ID LPAREN formals_opt RPAREN . LBRACE vdecl_list stmt_list RBRACE  (5)

	LBRACE  shift 28
	.  error


state 27
	formal_list : formal_list COMMA . typ ID  (9)

	INT  shift 5
	BOOL  shift 6
	FLOAT  shift 7
	VOID  shift 8
	STR  shift 9
	PITCH  shift 10
	ARRAY  shift 11
	.  error

	typ  goto 29


state 28
	fdecl : typ ID LPAREN formals_opt RPAREN LBRACE . vdecl_list stmt_list RBRACE  (5)
	vdecl_list : .  (17)

	.  reduce 17

	vdecl_list  goto 30


state 29
	formal_list : formal_list COMMA typ . ID  (9)

	ID  shift 31
	.  error


state 30
	fdecl : typ ID LPAREN formals_opt RPAREN LBRACE vdecl_list . stmt_list RBRACE  (5)
	vdecl_list : vdecl_list . vdecl  (18)
	stmt_list : .  (20)

	INT  shift 5
	BOOL  shift 6
	FLOAT  shift 7
	VOID  shift 8
	STR  shift 9
	PITCH  shift 10
	ARRAY  shift 11
	LSQUARE  reduce 20
	LPAREN  reduce 20
	LBRACE  reduce 20
	RBRACE  reduce 20
	MINUS  reduce 20
	NOT  reduce 20
	RETURN  reduce 20
	IF  reduce 20
	FOR  reduce 20
	WHILE  reduce 20
	LITERAL  reduce 20
	BLIT  reduce 20
	ID  reduce 20
	FLIT  reduce 20
	SLIT  reduce 20
	PLIT  reduce 20

	vdecl  goto 32
	typ  goto 33
	stmt_list  goto 34


state 31
	formal_list : formal_list COMMA typ ID .  (9)

	.  reduce 9


state 32
	vdecl_list : vdecl_list vdecl .  (18)

	.  reduce 18


state 33
	vdecl : typ . ID SEMI  (19)

	ID  shift 35
	.  error


state 34
	fdecl : typ ID LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list . RBRACE  (5)
	stmt_list : stmt_list . stmt  (21)

	LSQUARE  shift 36
	LPAREN  shift 37
	LBRACE  shift 38
	RBRACE  shift 39
	MINUS  shift 40
	NOT  shift 41
	RETURN  shift 42
	IF  shift 43
	FOR  shift 44
	WHILE  shift 45
	LITERAL  shift 46
	BLIT  shift 47
	ID  shift 48
	FLIT  shift 49
	SLIT  shift 50
	PLIT  shift 51
	.  error

	stmt  goto 52
	expr  goto 53


state 35
	vdecl : typ ID . SEMI  (19)

	SEMI  shift 19
	.  error


state 36
	expr : LSQUARE . args_opt RSQUARE  (56)
	args_opt : .  (57)

	LSQUARE  shift 36
	LPAREN  shift 37
	MINUS  shift 40
	NOT  shift 41
	LITERAL  shift 46
	BLIT  shift 47
	ID  shift 48
	FLIT  shift 49
	SLIT  shift 50
	PLIT  shift 51
	RSQUARE  reduce 57

	expr  goto 54
	args_opt  goto 55
	args_list  goto 56


state 37
	expr : LPAREN . expr RPAREN  (55)

	LSQUARE  shift 36
	LPAREN  shift 37
	MINUS  shift 40
	NOT  shift 41
	LITERAL  shift 46
	BLIT  shift 47
	ID  shift 48
	FLIT  shift 49
	SLIT  shift 50
	PLIT  shift 51
	.  error

	expr  goto 57


state 38
	stmt : LBRACE . stmt_list RBRACE  (24)
	stmt_list : .  (20)

	.  reduce 20

	stmt_list  goto 58


state 39
	fdecl : typ ID LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE .  (5)

	.  reduce 5


state 40
	expr : MINUS . expr  (51)

	LSQUARE  shift 36
	LPAREN  shift 37
	MINUS  shift 40
	NOT  shift 41
	LITERAL  shift 46
	BLIT  shift 47
	ID  shift 48
	FLIT  shift 49
	SLIT  shift 50
	PLIT  shift 51
	.  error

	expr  goto 59


state 41
	expr : NOT . expr  (52)

	LSQUARE  shift 36
	LPAREN  shift 37
	MINUS  shift 40
	NOT  shift 41
	LITERAL  shift 46
	BLIT  shift 47
	ID  shift 48
	FLIT  shift 49
	SLIT  shift 50
	PLIT  shift 51
	.  error

	expr  goto 60


state 42
	stmt : RETURN . expr_opt SEMI  (23)
	expr_opt : .  (29)

	LSQUARE  shift 36
	LPAREN  shift 37
	MINUS  shift 40
	NOT  shift 41
	LITERAL  shift 46
	BLIT  shift 47
	ID  shift 48
	FLIT  shift 49
	SLIT  shift 50
	PLIT  shift 51
	SEMI  reduce 29

	expr  goto 61
	expr_opt  goto 62


state 43
	stmt : IF . LPAREN expr RPAREN stmt  (25)
	stmt : IF . LPAREN expr RPAREN stmt ELSE stmt  (26)

	LPAREN  shift 63
	.  error


state 44
	stmt : FOR . LPAREN expr_opt SEMI expr SEMI expr_opt RPAREN stmt  (27)

	LPAREN  shift 64
	.  error


state 45
	stmt : WHILE . LPAREN expr RPAREN stmt  (28)

	LPAREN  shift 65
	.  error


state 46
	expr : LITERAL .  (31)

	.  reduce 31


state 47
	expr : BLIT .  (33)

	.  reduce 33


state 48
	expr : ID .  (36)
	expr : ID . ASSIGN expr  (53)
	expr : ID . LPAREN args_opt RPAREN  (54)

	LPAREN  shift 66
	ASSIGN  shift 67
	LSQUARE  reduce 36
	RSQUARE  reduce 36
	SEMI  reduce 36
	RPAREN  reduce 36
	COMMA  reduce 36
	PLUS  reduce 36
	MINUS  reduce 36
	TIMES  reduce 36
	DIVIDE  reduce 36
	MOD  reduce 36
	EQ  reduce 36
	NEQ  reduce 36
	LT  reduce 36
	LEQ  reduce 36
	GT  reduce 36
	GEQ  reduce 36
	AND  reduce 36
	OR  reduce 36


state 49
	expr : FLIT .  (32)

	.  reduce 32


state 50
	expr : SLIT .  (34)

	.  reduce 34


state 51
	expr : PLIT .  (35)

	.  reduce 35


state 52
	stmt_list : stmt_list stmt .  (21)

	.  reduce 21


state 53
	stmt : expr . SEMI  (22)
	expr : expr . PLUS expr  (37)
	expr : expr . MINUS expr  (38)
	expr : expr . TIMES expr  (39)
	expr : expr . DIVIDE expr  (40)
	expr : expr . MOD expr  (41)
	expr : expr . EQ expr  (42)
	expr : expr . NEQ expr  (43)
	expr : expr . LT expr  (44)
	expr : expr . LEQ expr  (45)
	expr : expr . GT expr  (46)
	expr : expr . GEQ expr  (47)
	expr : expr . AND expr  (48)
	expr : expr . OR expr  (49)
	expr : expr . LSQUARE expr RSQUARE  (50)

	LSQUARE  shift 68
	SEMI  shift 69
	PLUS  shift 70
	MINUS  shift 71
	TIMES  shift 72
	DIVIDE  shift 73
	MOD  shift 74
	EQ  shift 75
	NEQ  shift 76
	LT  shift 77
	LEQ  shift 78
	GT  shift 79
	GEQ  shift 80
	AND  shift 81
	OR  shift 82
	.  error


state 54
	expr : expr . PLUS expr  (37)
	expr : expr . MINUS expr  (38)
	expr : expr . TIMES expr  (39)
	expr : expr . DIVIDE expr  (40)
	expr : expr . MOD expr  (41)
	expr : expr . EQ expr  (42)
	expr : expr . NEQ expr  (43)
	expr : expr . LT expr  (44)
	expr : expr . LEQ expr  (45)
	expr : expr . GT expr  (46)
	expr : expr . GEQ expr  (47)
	expr : expr . AND expr  (48)
	expr : expr . OR expr  (49)
	expr : expr . LSQUARE expr RSQUARE  (50)
	args_list : expr .  (59)

	LSQUARE  shift 68
	PLUS  shift 70
	MINUS  shift 71
	TIMES  shift 72
	DIVIDE  shift 73
	MOD  shift 74
	EQ  shift 75
	NEQ  shift 76
	LT  shift 77
	LEQ  shift 78
	GT  shift 79
	GEQ  shift 80
	AND  shift 81
	OR  shift 82
	RSQUARE  reduce 59
	RPAREN  reduce 59
	COMMA  reduce 59


state 55
	expr : LSQUARE args_opt . RSQUARE  (56)

	RSQUARE  shift 83
	.  error


state 56
	args_opt : args_list .  (58)
	args_list : args_list . COMMA expr  (60)

	COMMA  shift 84
	RSQUARE  reduce 58
	RPAREN  reduce 58


state 57
	expr : expr . PLUS expr  (37)
	expr : expr . MINUS expr  (38)
	expr : expr . TIMES expr  (39)
	expr : expr . DIVIDE expr  (40)
	expr : expr . MOD expr  (41)
	expr : expr . EQ expr  (42)
	expr : expr . NEQ expr  (43)
	expr : expr . LT expr  (44)
	expr : expr . LEQ expr  (45)
	expr : expr . GT expr  (46)
	expr : expr . GEQ expr  (47)
	expr : expr . AND expr  (48)
	expr : expr . OR expr  (49)
	expr : expr . LSQUARE expr RSQUARE  (50)
	expr : LPAREN expr . RPAREN  (55)

	LSQUARE  shift 68
	RPAREN  shift 85
	PLUS  shift 70
	MINUS  shift 71
	TIMES  shift 72
	DIVIDE  shift 73
	MOD  shift 74
	EQ  shift 75
	NEQ  shift 76
	LT  shift 77
	LEQ  shift 78
	GT  shift 79
	GEQ  shift 80
	AND  shift 81
	OR  shift 82
	.  error


state 58
	stmt_list : stmt_list . stmt  (21)
	stmt : LBRACE stmt_list . RBRACE  (24)

	LSQUARE  shift 36
	LPAREN  shift 37
	LBRACE  shift 38
	RBRACE  shift 86
	MINUS  shift 40
	NOT  shift 41
	RETURN  shift 42
	IF  shift 43
	FOR  shift 44
	WHILE  shift 45
	LITERAL  shift 46
	BLIT  shift 47
	ID  shift 48
	FLIT  shift 49
	SLIT  shift 50
	PLIT  shift 51
	.  error

	stmt  goto 52
	expr  goto 53


state 59
	expr : expr . PLUS expr  (37)
	expr : expr . MINUS expr  (38)
	expr : expr . TIMES expr  (39)
	expr : expr . DIVIDE expr  (40)
	expr : expr . MOD expr  (41)
	expr : expr . EQ expr  (42)
	expr : expr . NEQ expr  (43)
	expr : expr . LT expr  (44)
	expr : expr . LEQ expr  (45)
	expr : expr . GT expr  (46)
	expr : expr . GEQ expr  (47)
	expr : expr . AND expr  (48)
	expr : expr . OR expr  (49)
	expr : expr . LSQUARE expr RSQUARE  (50)
	expr : MINUS expr .  (51)

	.  reduce 51


state 60
	expr : expr . PLUS expr  (37)
	expr : expr . MINUS expr  (38)
	expr : expr . TIMES expr  (39)
	expr : expr . DIVIDE expr  (40)
	expr : expr . MOD expr  (41)
	expr : expr . EQ expr  (42)
	expr : expr . NEQ expr  (43)
	expr : expr . LT expr  (44)
	expr : expr . LEQ expr  (45)
	expr : expr . GT expr  (46)
	expr : expr . GEQ expr  (47)
	expr : expr . AND expr  (48)
	expr : expr . OR expr  (49)
	expr : expr . LSQUARE expr RSQUARE  (50)
	expr : NOT expr .  (52)

	.  reduce 52


state 61
	expr_opt : expr .  (30)
	expr : expr . PLUS expr  (37)
	expr : expr . MINUS expr  (38)
	expr : expr . TIMES expr  (39)
	expr : expr . DIVIDE expr  (40)
	expr : expr . MOD expr  (41)
	expr : expr . EQ expr  (42)
	expr : expr . NEQ expr  (43)
	expr : expr . LT expr  (44)
	expr : expr . LEQ expr  (45)
	expr : expr . GT expr  (46)
	expr : expr . GEQ expr  (47)
	expr : expr . AND expr  (48)
	expr : expr . OR expr  (49)
	expr : expr . LSQUARE expr RSQUARE  (50)

	LSQUARE  shift 68
	PLUS  shift 70
	MINUS  shift 71
	TIMES  shift 72
	DIVIDE  shift 73
	MOD  shift 74
	EQ  shift 75
	NEQ  shift 76
	LT  shift 77
	LEQ  shift 78
	GT  shift 79
	GEQ  shift 80
	AND  shift 81
	OR  shift 82
	SEMI  reduce 30
	RPAREN  reduce 30


state 62
	stmt : RETURN expr_opt . SEMI  (23)

	SEMI  shift 87
	.  error


state 63
	stmt : IF LPAREN . expr RPAREN stmt  (25)
	stmt : IF LPAREN . expr RPAREN stmt ELSE stmt  (26)

	LSQUARE  shift 36
	LPAREN  shift 37
	MINUS  shift 40
	NOT  shift 41
	LITERAL  shift 46
	BLIT  shift 47
	ID  shift 48
	FLIT  shift 49
	SLIT  shift 50
	PLIT  shift 51
	.  error

	expr  goto 88


state 64
	stmt : FOR LPAREN . expr_opt SEMI expr SEMI expr_opt RPAREN stmt  (27)
	expr_opt : .  (29)

	LSQUARE  shift 36
	LPAREN  shift 37
	MINUS  shift 40
	NOT  shift 41
	LITERAL  shift 46
	BLIT  shift 47
	ID  shift 48
	FLIT  shift 49
	SLIT  shift 50
	PLIT  shift 51
	SEMI  reduce 29

	expr  goto 61
	expr_opt  goto 89


state 65
	stmt : WHILE LPAREN . expr RPAREN stmt  (28)

	LSQUARE  shift 36
	LPAREN  shift 37
	MINUS  shift 40
	NOT  shift 41
	LITERAL  shift 46
	BLIT  shift 47
	ID  shift 48
	FLIT  shift 49
	SLIT  shift 50
	PLIT  shift 51
	.  error

	expr  goto 90


state 66
	expr : ID LPAREN . args_opt RPAREN  (54)
	args_opt : .  (57)

	LSQUARE  shift 36
	LPAREN  shift 37
	MINUS  shift 40
	NOT  shift 41
	LITERAL  shift 46
	BLIT  shift 47
	ID  shift 48
	FLIT  shift 49
	SLIT  shift 50
	PLIT  shift 51
	RPAREN  reduce 57

	expr  goto 54
	args_opt  goto 91
	args_list  goto 56


state 67
	expr : ID ASSIGN . expr  (53)

	LSQUARE  shift 36
	LPAREN  shift 37
	MINUS  shift 40
	NOT  shift 41
	LITERAL  shift 46
	BLIT  shift 47
	ID  shift 48
	FLIT  shift 49
	SLIT  shift 50
	PLIT  shift 51
	.  error

	expr  goto 92


state 68
	expr : expr LSQUARE . expr RSQUARE  (50)

	LSQUARE  shift 36
	LPAREN  shift 37
	MINUS  shift 40
	NOT  shift 41
	LITERAL  shift 46
	BLIT  shift 47
	ID  shift 48
	FLIT  shift 49
	SLIT  shift 50
	PLIT  shift 51
	.  error

	expr  goto 93


state 69
	stmt : expr SEMI .  (22)

	.  reduce 22


state 70
	expr : expr PLUS . expr  (37)

	LSQUARE  shift 36
	LPAREN  shift 37
	MINUS  shift 40
	NOT  shift 41
	LITERAL  shift 46
	BLIT  shift 47
	ID  shift 48
	FLIT  shift 49
	SLIT  shift 50
	PLIT  shift 51
	.  error

	expr  goto 94


state 71
	expr : expr MINUS . expr  (38)

	LSQUARE  shift 36
	LPAREN  shift 37
	MINUS  shift 40
	NOT  shift 41
	LITERAL  shift 46
	BLIT  shift 47
	ID  shift 48
	FLIT  shift 49
	SLIT  shift 50
	PLIT  shift 51
	.  error

	expr  goto 95


state 72
	expr : expr TIMES . expr  (39)

	LSQUARE  shift 36
	LPAREN  shift 37
	MINUS  shift 40
	NOT  shift 41
	LITERAL  shift 46
	BLIT  shift 47
	ID  shift 48
	FLIT  shift 49
	SLIT  shift 50
	PLIT  shift 51
	.  error

	expr  goto 96


state 73
	expr : expr DIVIDE . expr  (40)

	LSQUARE  shift 36
	LPAREN  shift 37
	MINUS  shift 40
	NOT  shift 41
	LITERAL  shift 46
	BLIT  shift 47
	ID  shift 48
	FLIT  shift 49
	SLIT  shift 50
	PLIT  shift 51
	.  error

	expr  goto 97


state 74
	expr : expr MOD . expr  (41)

	LSQUARE  shift 36
	LPAREN  shift 37
	MINUS  shift 40
	NOT  shift 41
	LITERAL  shift 46
	BLIT  shift 47
	ID  shift 48
	FLIT  shift 49
	SLIT  shift 50
	PLIT  shift 51
	.  error

	expr  goto 98


state 75
	expr : expr EQ . expr  (42)

	LSQUARE  shift 36
	LPAREN  shift 37
	MINUS  shift 40
	NOT  shift 41
	LITERAL  shift 46
	BLIT  shift 47
	ID  shift 48
	FLIT  shift 49
	SLIT  shift 50
	PLIT  shift 51
	.  error

	expr  goto 99


state 76
	expr : expr NEQ . expr  (43)

	LSQUARE  shift 36
	LPAREN  shift 37
	MINUS  shift 40
	NOT  shift 41
	LITERAL  shift 46
	BLIT  shift 47
	ID  shift 48
	FLIT  shift 49
	SLIT  shift 50
	PLIT  shift 51
	.  error

	expr  goto 100


state 77
	expr : expr LT . expr  (44)

	LSQUARE  shift 36
	LPAREN  shift 37
	MINUS  shift 40
	NOT  shift 41
	LITERAL  shift 46
	BLIT  shift 47
	ID  shift 48
	FLIT  shift 49
	SLIT  shift 50
	PLIT  shift 51
	.  error

	expr  goto 101


state 78
	expr : expr LEQ . expr  (45)

	LSQUARE  shift 36
	LPAREN  shift 37
	MINUS  shift 40
	NOT  shift 41
	LITERAL  shift 46
	BLIT  shift 47
	ID  shift 48
	FLIT  shift 49
	SLIT  shift 50
	PLIT  shift 51
	.  error

	expr  goto 102


state 79
	expr : expr GT . expr  (46)

	LSQUARE  shift 36
	LPAREN  shift 37
	MINUS  shift 40
	NOT  shift 41
	LITERAL  shift 46
	BLIT  shift 47
	ID  shift 48
	FLIT  shift 49
	SLIT  shift 50
	PLIT  shift 51
	.  error

	expr  goto 103


state 80
	expr : expr GEQ . expr  (47)

	LSQUARE  shift 36
	LPAREN  shift 37
	MINUS  shift 40
	NOT  shift 41
	LITERAL  shift 46
	BLIT  shift 47
	ID  shift 48
	FLIT  shift 49
	SLIT  shift 50
	PLIT  shift 51
	.  error

	expr  goto 104


state 81
	expr : expr AND . expr  (48)

	LSQUARE  shift 36
	LPAREN  shift 37
	MINUS  shift 40
	NOT  shift 41
	LITERAL  shift 46
	BLIT  shift 47
	ID  shift 48
	FLIT  shift 49
	SLIT  shift 50
	PLIT  shift 51
	.  error

	expr  goto 105


state 82
	expr : expr OR . expr  (49)

	LSQUARE  shift 36
	LPAREN  shift 37
	MINUS  shift 40
	NOT  shift 41
	LITERAL  shift 46
	BLIT  shift 47
	ID  shift 48
	FLIT  shift 49
	SLIT  shift 50
	PLIT  shift 51
	.  error

	expr  goto 106


state 83
	expr : LSQUARE args_opt RSQUARE .  (56)

	.  reduce 56


state 84
	args_list : args_list COMMA . expr  (60)

	LSQUARE  shift 36
	LPAREN  shift 37
	MINUS  shift 40
	NOT  shift 41
	LITERAL  shift 46
	BLIT  shift 47
	ID  shift 48
	FLIT  shift 49
	SLIT  shift 50
	PLIT  shift 51
	.  error

	expr  goto 107


state 85
	expr : LPAREN expr RPAREN .  (55)

	.  reduce 55


state 86
	stmt : LBRACE stmt_list RBRACE .  (24)

	.  reduce 24


state 87
	stmt : RETURN expr_opt SEMI .  (23)

	.  reduce 23


state 88
	stmt : IF LPAREN expr . RPAREN stmt  (25)
	stmt : IF LPAREN expr . RPAREN stmt ELSE stmt  (26)
	expr : expr . PLUS expr  (37)
	expr : expr . MINUS expr  (38)
	expr : expr . TIMES expr  (39)
	expr : expr . DIVIDE expr  (40)
	expr : expr . MOD expr  (41)
	expr : expr . EQ expr  (42)
	expr : expr . NEQ expr  (43)
	expr : expr . LT expr  (44)
	expr : expr . LEQ expr  (45)
	expr : expr . GT expr  (46)
	expr : expr . GEQ expr  (47)
	expr : expr . AND expr  (48)
	expr : expr . OR expr  (49)
	expr : expr . LSQUARE expr RSQUARE  (50)

	LSQUARE  shift 68
	RPAREN  shift 108
	PLUS  shift 70
	MINUS  shift 71
	TIMES  shift 72
	DIVIDE  shift 73
	MOD  shift 74
	EQ  shift 75
	NEQ  shift 76
	LT  shift 77
	LEQ  shift 78
	GT  shift 79
	GEQ  shift 80
	AND  shift 81
	OR  shift 82
	.  error


state 89
	stmt : FOR LPAREN expr_opt . SEMI expr SEMI expr_opt RPAREN stmt  (27)

	SEMI  shift 109
	.  error


state 90
	stmt : WHILE LPAREN expr . RPAREN stmt  (28)
	expr : expr . PLUS expr  (37)
	expr : expr . MINUS expr  (38)
	expr : expr . TIMES expr  (39)
	expr : expr . DIVIDE expr  (40)
	expr : expr . MOD expr  (41)
	expr : expr . EQ expr  (42)
	expr : expr . NEQ expr  (43)
	expr : expr . LT expr  (44)
	expr : expr . LEQ expr  (45)
	expr : expr . GT expr  (46)
	expr : expr . GEQ expr  (47)
	expr : expr . AND expr  (48)
	expr : expr . OR expr  (49)
	expr : expr . LSQUARE expr RSQUARE  (50)

	LSQUARE  shift 68
	RPAREN  shift 110
	PLUS  shift 70
	MINUS  shift 71
	TIMES  shift 72
	DIVIDE  shift 73
	MOD  shift 74
	EQ  shift 75
	NEQ  shift 76
	LT  shift 77
	LEQ  shift 78
	GT  shift 79
	GEQ  shift 80
	AND  shift 81
	OR  shift 82
	.  error


state 91
	expr : ID LPAREN args_opt . RPAREN  (54)

	RPAREN  shift 111
	.  error


state 92
	expr : expr . PLUS expr  (37)
	expr : expr . MINUS expr  (38)
	expr : expr . TIMES expr  (39)
	expr : expr . DIVIDE expr  (40)
	expr : expr . MOD expr  (41)
	expr : expr . EQ expr  (42)
	expr : expr . NEQ expr  (43)
	expr : expr . LT expr  (44)
	expr : expr . LEQ expr  (45)
	expr : expr . GT expr  (46)
	expr : expr . GEQ expr  (47)
	expr : expr . AND expr  (48)
	expr : expr . OR expr  (49)
	expr : expr . LSQUARE expr RSQUARE  (50)
	expr : ID ASSIGN expr .  (53)

	LSQUARE  shift 68
	PLUS  shift 70
	MINUS  shift 71
	TIMES  shift 72
	DIVIDE  shift 73
	MOD  shift 74
	EQ  shift 75
	NEQ  shift 76
	LT  shift 77
	LEQ  shift 78
	GT  shift 79
	GEQ  shift 80
	AND  shift 81
	OR  shift 82
	RSQUARE  reduce 53
	SEMI  reduce 53
	RPAREN  reduce 53
	COMMA  reduce 53


state 93
	expr : expr . PLUS expr  (37)
	expr : expr . MINUS expr  (38)
	expr : expr . TIMES expr  (39)
	expr : expr . DIVIDE expr  (40)
	expr : expr . MOD expr  (41)
	expr : expr . EQ expr  (42)
	expr : expr . NEQ expr  (43)
	expr : expr . LT expr  (44)
	expr : expr . LEQ expr  (45)
	expr : expr . GT expr  (46)
	expr : expr . GEQ expr  (47)
	expr : expr . AND expr  (48)
	expr : expr . OR expr  (49)
	expr : expr . LSQUARE expr RSQUARE  (50)
	expr : expr LSQUARE expr . RSQUARE  (50)
